--- a/index.html
+++ b/index.html
@@ -452,25 +452,11 @@
     </div>
 
     <!-- Js  -->
-    <script>
-
-        // food category
-        let foodMenuList = document.querySelector('.food-item-wrap');
-        let foodCategory = document.querySelector('.food-category');
-        let categories = foodCategory.querySelectorAll('button');
-
-        Array.from(categories).forEach((item) => {
-            item.onclick = (e) => {
-                let currcat = foodCategory.querySelector('button.active');
-                currcat.classList.remove('active')
-                e.target.classList.add('active')
-                foodMenuList.classList = 'food-item-wrap ' + e.target.getAttribute('data-food-type')
-            }
-        })
-    </script>
+    
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/carousel.js"></script>
+    <script src="assets/js/myJs.js"></script>
 
 </body>
 
