fix lai header 05/10 vinh

--- a/index.html
+++ b/index.html
@@ -9,64 +9,67 @@
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <title>TTV Food</title>
 </head>
 
 <body>
     <div class="wrapper">
         <!-- Start Header  -->
-        <div class="header flex-container">
-            <div id="logo"><img src="assets/imgs/main-logo.png" width="80px" alt="TTVFood logo"></div>
-            <div id="navbar">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Trang chủ</a>
-                    </li>
-                    <li class="nav-item" style="position: relative;">
-                        <a href="" class="nav-link">Thể loại <i class="fas fa-angle-down"></i></a>
-                        <ul class="subnav">
-                            <li>
-                                <a href="">Eat clean</a>
+        <div class="header-wrap" style="background-color:#0f9d58;">
+            <div class="container">
+                <div class="header  ">
+                    <div id="logo"><img src="assets/imgs/main-logo.png" width="80px" alt="TTVFood logo"></div>
+                    <div id="navbar">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Trang chủ</a>
                             </li>
-                            <li>
-                                <a href="">Eat heathy</a>
+                            <li class="nav-item" style="position: relative;">
+                                <a href="" class="nav-link">Thể loại <i class="fas fa-angle-down"></i></a>
+                                <ul class="subnav">
+                                    <li>
+                                        <a href="">Eat clean</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Eat heathy</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Đồ ăn nhanh</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Đồ ăn Cao cấp</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Đồ ăn Bình dân</a>
+                                    </li>
+                                </ul>
                             </li>
-                            <li>
-                                <a href="">Đồ ăn nhanh</a>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Người sáng lập</a>
                             </li>
-                            <li>
-                                <a href="">Đồ ăn Cao cấp</a>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Liên hệ</a>
                             </li>
-                            <li>
-                                <a href="">Đồ ăn Bình dân</a>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Bản đồ</a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Người sáng lập</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Liên hệ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Bản đồ</a>
-                    </li>
-                </ul>
+                    </div>
+                    <div id="search-box">
+                        <form action="">
+                            <input type="search" placeholder="Search anything">
+                            <span class="pre-input">
+                                <a class="fas fa-search"></a>
+                            </span>
+                        </form>
+                    </div>
+                    <div id="user-account">a</div>
+                </div>
             </div>
-            <div id="search-box">
-                <form action="">
-                    <input type="search" placeholder="Search anything">
-                    <span class="pre-input">
-                        <a class="fas fa-search"></a>
-                    </span>
-                </form>
-            </div>
-            <div id="user-account">a</div>
         </div>
-
         <!-- End Header  -->
 
         <!-- Start slider -->
@@ -452,7 +455,7 @@
     </div>
 
     <!-- Js  -->
-    
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/carousel.js"></script>
